# BlueMarbleMaps

./: .gitignore  CMakeLists.txt  README.md  TODO.md
bluemarble_index/: continents.json.database  southamerica_high.geo.json.database
cimg_lib/: CMakeLists.txt  dummy.cpp
cmake/: FindGLFW3.cmake  findGLAD.cmake  findGLM.cmake
examples/: CMakeLists.txt  OpenGLTexture.cpp  OpenGLTexture.h  example_dropshadow.cpp  example_glfw.cpp  example_glfw_2.cpp  example_texture copy.cpp  example_texture.cpp  glad.h  reflection_utils.h  test_filedatabase.cpp  test_image_conversion.cpp  test_json.cpp  test_my_reflection.cpp  test_reflection.cpp  test_reflection_basic.cpp  test_resize_performance.cpp  test_shared_from_this.cpp  test_signal.cpp
examples/imgui/: CMakeLists.txt  ExampleImgui.html  main.cpp
include/: Algorithm.h  Animation.h  AttributeVariable.h  Attributes.h  BlueMarbleLayout.h  Buttons.h  CImgEventManager.h  CSVReader.h  Core.h  DataSet.h  DefaultEventHandlers.h  Drawable.h  EngineObject.h  Event.h  EventHandler.h  Feature.h  FeatureAnimation.h  File.h  GeoGuessGame.h  Geometry.h  Identity.h  KeyEvent.h  LabelOrganizer.h  Layer.h  Map.h  PerformanceMonitor.h  PresentationObject.h  Raster.h  Thread.h  Utils.h  Visualizer.h  test_eventHandler.h
include/Application/: WindowGL.h
include/BlueMarbleMaps/: Animation.h  Attributes.h  CImgEventManager.h  Color.h  Core.h  DataSet.h  DefaultEventHandlers.h  Drawable.h  Effect.h  EngineObject.h  Event.h  EventHandler.h  Feature.h  Geometry.h  Layer.h  Map.h  MapConstraints.h  MapControl.h  OpenGLDrawable.h  PointerEvent.h  Raster.h  Renderer.h  SoftwareDrawable.h  SoftwareRenderer.h  Transform.h  UpdateInterfaces.h  Utils.h  Visualizer.h
include/BlueMarbleMaps/CoordinateSystem/: Crs.h  CrsUtils.h  Ellipsoid.h  GeodeticDatum.h  Projection.h  SurfaceModel.h
include/BlueMarbleMaps/Core/: Animation.h  AnimationFunctions.h  AttributeVariable.h  Attributes.h  BlueMarbleLayout.h  (+34 more)
include/Common/: Keys.h
include/RendererGL/: Camera.h  Camera2D.h  CameraOrthographic.h  CameraPerspective.h  IBO.h  Primitive.h  Primitive2D.h  Primitive3D.h  Shader.h  Texture.h  VAO.h  VBO.h  Vertice.h  WindowGL.h
layouts/: default_layout.bml
performance_reports/: performance_report.pf
rendererGL/: CMakeLists.txt  renderer.cpp
src/: Algorithm.cpp  Animation.cpp  CImgDrawableImpl.cpp  CImgEventManager.cpp  CImgRaster.cpp  CMakeLists.txt  DataSet.cpp  Drawable.cpp  Effect.cpp  Feature.cpp  FeatureAnimation.cpp  File.cpp  Geometry.cpp  Layer.cpp  Map.cpp  PerformanceMonitor.cpp  PresentationObject.cpp  UpdateInterfaces.cpp  Visualizer.cpp  main.cpp
src/Application/: CMakeLists.txt  WindowGL.cpp  default_map_configuration.h  main_cimg.cpp  main_glfw.cpp  map_configuration.h
src/BlueMarbleMaps/: CImgEventManager.cpp  CMakeLists.txt  Drawable.cpp  EngineObject.cpp  Geometry.cpp  LabelOrganizer.cpp  Layer.cpp  Map.cpp
src/BlueMarbleMaps/src/: Algorithm.cpp  Animation.cpp  Brush.cpp  CMakeLists.txt  DataSet.cpp  Drawable.cpp  Effect.cpp  EngineObject.cpp  EventHandler.cpp  Feature.cpp  FeatureAnimation.cpp  File.cpp  Geometry.cpp  LabelOrganizer.cpp  Layer.cpp  Map.cpp  MapConstraints.cpp  MapControl.cpp  OpenGLDrawable.cpp  Pen.cpp  PresentationObject.cpp  Raster.cpp  SoftwareDrawable.cpp  Tool.cpp  UpdateInterfaces.cpp  Visualizer.cpp  main.cpp
src/BlueMarbleMaps/src/CoordinateSystem/: CMakeLists.txt  Crs.cpp  Ellispoid.cpp  GeodeticDatum.cpp  Projection.cpp  SurfaceModel.cpp
src/BlueMarbleMaps/src/Core/: Animation.cpp  BlueMarbleLayout.cpp  Brush.cpp  CMakeLists.txt  Camera.cpp  DataSet.cpp  EngineObject.cpp  Feature.cpp  FeatureAnimation.cpp  Geometry.cpp  Layer.cpp  Map.cpp  MapConstraints.cpp  MapControl.cpp  OpenGLDrawable.cpp  Pen.cpp  Raster.cpp  SoftwareDrawable.cpp  StandardLayer.cpp  Tool.cpp  ToolSet.cpp  UpdateInterfaces.cpp  Visualizer.cpp
src/BlueMarbleMaps/src/Core/DataSets/: CsvDataSet.cpp  DataSet.cpp  FileDataSet.cpp  GeoJsonDataSet.cpp  ImageDataSet.cpp  MemoryDataSet.cpp  ShapeFileDataSet.cpp
src/BlueMarbleMaps/src/Core/Index/: FIFOCache.cpp  FeatureStore.cpp  FileDatabase.cpp  MemoryDatabase.cpp  QuadTreeIndex.cpp
src/BlueMarbleMaps/src/Core/Layer/: Layer.cpp  LayerSet.cpp  StandardLayer.cpp  TileLayer.cpp
src/BlueMarbleMaps/src/Core/Serialization/: GeoJsonSerializer.cpp  JsonValue.cpp
src/BlueMarbleMaps/src/Event/: CMakeLists.txt  EventHandler.cpp  EventManager.cpp
src/BlueMarbleMaps/src/Logging/: CMakeLists.txt  Logging.cpp
src/BlueMarbleMaps/src/System/: CMakeLists.txt  CSVFile.cpp  File.cpp  JsonFile.cpp  Thread.cpp
src/BlueMarbleMaps/src/Utility/: Algorithm.cpp  CMakeLists.txt
src/Main/: CMakeLists.txt  OpenGLTexture.cpp  OpenGLTexture.h  Texture.h  main_cimg.cpp  main_glfw.cpp  map_configuration.h
src/Platform/: CMakeLists.txt
src/Platform/CImg/src/: CImgEventManager.h  CImgRaster.cpp  CImgSoftwareRenderer.cpp  CMakeLists.txt  DrawableImpl.cpp  RasterImpl.cpp  SoftwareDrawableImpl.cpp
src/Platform/CImg/src/RasterImpl/: RasterImpl.h
src/Platform/CImg/src/SoftwareDrawableImpl/: SoftwareDrawableImpl.h
src/Platform/CImg/src/include/RasterImpl/: RasterImpl.h
src/Platform/CImg/src/include/SoftwareDrawableImpl/: SoftwareDrawableImpl.h
src/Platform/OpenGL/: Algorithms.cpp  Batch.cpp  CMakeLists.txt  CameraOrthographic.cpp  CameraPerspective.cpp  IBO.cpp  Line.cpp  Polygon.cpp  Primitive2D.cpp  Rect.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  renderer.cpp
src/Platform/OpenGL/Shaders/: basic.frag  basic.vert  line.frag  line.vert  polygon.frag  polygon.vert
src/Platform/OpenGL/ShadersOpenGLES/: basic.frag  basic.vert  line.frag  polygon.vert
src/Platform/StbImage/src/: CMakeLists.txt  RasterImpl.cpp
src/Platform/StbImage/src/include/RasterImpl/: RasterImpl.h
src/Platform/rendererGL/: CMakeLists.txt  Camera.cpp  Camera2D.cpp  CameraOrthographic.cpp  CameraPerspective.cpp  IBO.cpp  Primitive2D.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  WindowGL.cpp  renderer.cpp
src/Platform/rendererGL/Shaders/: basic.frag  basic.vert  line.frag
src/rendererGL/: CMakeLists.txt  renderer.cpp
(+68 files in other folders)
