
# Example drop shadow
add_executable(ExampleDropShadow example_dropshadow.cpp)
target_include_directories(ExampleDropShadow
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include
)
target_link_libraries(ExampleDropShadow PRIVATE CImgLib)

add_executable(TestImageConversion test_image_conversion.cpp)
target_link_libraries(TestImageConversion PRIVATE CImgLib)
target_link_libraries(TestImageConversion PRIVATE StbImageLib)
target_link_libraries(TestImageConversion PRIVATE BlueMarbleMapsLib)

add_executable(TestResizePerformance test_resize_performance.cpp)
target_link_libraries(TestResizePerformance PRIVATE CImgLib)
target_link_libraries(TestResizePerformance PRIVATE StbImageLib)
target_link_libraries(TestResizePerformance PRIVATE BlueMarbleMapsLib)

add_executable(TestReflection test_reflection.cpp)
target_link_libraries(TestReflection PRIVATE ReflectionCpp)
target_link_libraries(TestReflection PRIVATE BlueMarbleMapsLib)
