cmake_minimum_required(VERSION 3.10)

if(BLUEMARBLE_USE_CIMG_WINDOW)
    message("Using CImg window main")
    add_executable(BlueMarbleMapsCImg main_cimg.cpp)
    target_link_libraries(BlueMarbleMapsCImg CImgLib)
    target_link_libraries(BlueMarbleMapsCImg BlueMarbleMapsLib)
else()
    message("Using GLFW window main")
    add_executable(BlueMarbleMapsGLFW main_glfw.cpp OpenGLTexture.cpp)
    target_link_libraries(BlueMarbleMapsGLFW CImgLib)
    target_link_libraries(BlueMarbleMapsGLFW BlueMarbleMapsLib)
    find_package(GLFW3 REQUIRED)
    target_include_directories(BlueMarbleMapsGLFW PRIVATE ${GLFW3_INCLUDE_DIR})
    target_link_libraries(BlueMarbleMapsGLFW ${GLFW3_LIBRARY})
    target_link_libraries(BlueMarbleMapsGLFW Glad)
endif()

